--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "react-pro-sidebar": "^0.7.1",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0"
   }
 }
