--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@lourenci/react-kanban": "^0.13.0",
     "@mdi/font": "^4.2.95",
     "@tinymce/tinymce-react": "^3.3.2",
+    "axios": "^0.27.2",
     "bootstrap": "^4.3.1",
     "bosket": "^0.2.3",
     "brace": "^0.11.1",
@@ -44,7 +45,8 @@
     "react-input-mask": "^3.0.0-alpha.0",
     "react-jvectormap": "0.0.13",
     "react-quill": "^1.3.3",
-    "react-router-dom": "^5.0.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "3.1.1",
     "react-select": "^3.0.8",
     "react-simple-maps": "^1.0.0-beta.0",
@@ -55,6 +57,9 @@
     "react-tag-autocomplete": "^5.11.1",
     "react-treebeard": "^3.2.4",
     "react-trello": "^2.2.3",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "simple-line-icons": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "sweetalert2-react": "^0.8.3",
@@ -72,14 +77,20 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.3%",
+      "not ie 11",
       "not dead",
       "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      ">0.3%",
+      "not ie 11",
+      "not dead",
+      "not op_mini all"
     ]
   }
+
 }
