--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "chartist-plugin-tooltips-updated": "^0.1.4",
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
+    "query-string": "^7.1.1",
     "react": "^16.13.1",
     "react-chartist": "^0.14.4",
     "react-copy-to-clipboard": "^5.0.3",
