--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
     "react": "^16.13.1",
     "react-chartist": "^0.14.4",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-currency-input-field": "^3.6.5",
+    "react-datepicker": "^4.8.0",
     "react-datetime": "^3.0.4",
     "react-dom": "^16.13.1",
     "react-github-btn": "^1.2.0",
