Ajusting envs and settings for deploy

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 SECRET_KEY=django-insecure-#yze(gu)46otnpx9+_r@d%y6jp(eh^h^3!n-&pfueb%12%n(nb
 
 # folder to save report files
-DOWNLOAD_REPORT_FOLDER=/home/musta/Downloads/
+DOWNLOAD_REPORT_FOLDER=/home/jorginhomustafa/Downloads/
 
 # database
 NAME=voltage
@@ -10,5 +10,5 @@ PASSWORD=postgres
 HOST=localhost
 
 # SMTP
-EMAIL_HOST_USER=''
-EMAIL_HOST_PASSWORD=''
+EMAIL_HOST_USER=jorge.mustafa@itmss.com.br
+EMAIL_HOST_PASSWORD=Mohamet20@!
