Transforming HOST in variable into frontend/.env and cleaning imports

--- a/.env.dev
+++ b/.env.dev
@@ -1,16 +1,20 @@
 SECRET_KEY=django-insecure-#yze(gu)46otnpx9+_r@d%y6jp(eh^h^3!n-&pfueb%12%n(nb
 
-# folder to save report files
-DOWNLOAD_REPORT_FOLDER=/home/musta/Downloads/
+# Folder to save report files
+DOWNLOAD_REPORT_FOLDER=/home/user/Downloads/
 
-# database
+# Database
 DB_NAME=voltage
 DB_USER=postgres
 DB_PASS=postgres
 DB_HOST=localhost
+DB_PORT=5432
 
 # SMTP
 EMAIL_HOST_USER=''
 EMAIL_HOST_PASSWORD=''
 
-DEBUG=True
+DEBUG=TRUE
+
+# Auth Google
+SOCIAL_AUTH_ALLOWED_REDIRECT_URIS=http://localhost:8000/google
