--- a/.env.prod
+++ b/.env.prod
@@ -1,16 +1,20 @@
 SECRET_KEY=django-insecure-#yze(gu)46otnpx9+_r@d%y6jp(eh^h^3!n-&pfueb%12%n(nb
 
-# folder to save report files
-DOWNLOAD_REPORT_FOLDER=/home/jorginhomustafa/Downloads/
+# Folder to save report files
+DOWNLOAD_REPORT_FOLDER=/home/user/Downloads/
 
-# database
+# Database
 DB_NAME=voltage
 DB_USER=postgres
-DB_PASS=Mu374fa@1PPP
-DB_HOST=34.95.212.189
+DB_PASS=postgres
+DB_HOST=localhost
+DB_PORT=5432
 
 # SMTP
-EMAIL_HOST_USER=jorge.mustafa@itmss.com.br
-EMAIL_HOST_PASSWORD=Mohamet20@!
+EMAIL_HOST_USER=''
+EMAIL_HOST_PASSWORD=''
 
 DEBUG=False
+
+# Auth Google
+SOCIAL_AUTH_ALLOWED_REDIRECT_URIS=http://voltagemanager.site/google
