--- a/.env.dev
+++ b/.env.dev
@@ -14,7 +14,7 @@ DB_PORT=5432
 EMAIL_HOST_USER=''
 EMAIL_HOST_PASSWORD=''
 
-DEBUG=TRUE
+DEBUG=True
 
 # Auth Google
 SOCIAL_AUTH_ALLOWED_REDIRECT_URIS=http://localhost:8000/google
